﻿0.9.1
Additions:
- Added the Synastry and its built-in weapon, the Apocatastasis [say *that* fast 5 times]
- Added some secret things that aren't yet obtainable

Changes:
- The Frelia no longer has super-heavy mount points; instead, it has two large energy slots (which can still be turned to fighter bays if left empty)
- Moved multiple weapon blueprints into the rare category
- Added new sprites for Sylpheed Station and Ozma Station
- Random behind the scenes adjustments for stuff
- Minor system spawning adjustments
- Added "Stable Locations" to the two Sylphon systems
- Adjusted blueprint rarities for most ships
- Removed Sylphon experimental BP package
- Updated autofit tags for most weapons

Bugfixes:
- Ozma Station is no longer a freeport *twice* (don't ask how that works): only works on new saves, unfortunately, but it's not serious enough to make a new save over anyhow
- Ozma Station now properly has a Low-tech battlestation (also only on new games, but honestly don't bother with it if you're in the middle of a save)


0.9rc2
Bugfixes:
- Fixed Vril-related problems
- Fixed certain built-ins showing up as modular weapons


0.9rc1
Additions:
- Added 0.9 integration
- Added a unique industry to Sylpheed Station allowing it to tech-mine Preatorium remotely (and some lore-gibble preventing Preatorium from being colonized/looted)
- Added the Vetra-class kinetic bomber

Changes:
- Now uses and requires MagicLib; all old code which is included in MagicLib has been refactored and many old scripts have been removed


0.8.3 [Never released]
Additions:
- Sylphon fleets in the campaign now has a chance to upgrade their ships with Sylph Cores, if the submarket is available in their market
- Added a new line of hullmods for Sylph Cores; they can only be used on ships with a mounted Sylph Core:
	-- Advisor Subroutines: Provides tactical advice to the commander, increasing command point regeneration as long as the flagship also has this mod