@@ -4,6 +4,5 @@ SRD_Eagle_strike
 SRD_Replekia_andromeda
 SRD_Eolia_strike
 SRD_Celika_heavy
-SRD_Okarra_assault
 SRD_Rakia_flag
 SRD_Etrika_standard
