@@ -1,10 +1,8 @@
 variant id
-
 SRD_Metafalica_standard
 SRD_Etrika_standard
 SRD_Eolia_standard
 SRD_Eagle_standard
-SRD_Okarra_standard
 SRD_Seresvalla_standard
 SRD_Tarima_standard
 SRD_Valestri_scalpel
