@@ -42,6 +42,10 @@ Increases supply upkeep by %s, and reduces all crew capacity by %s. Counts as a 
 ~A curious soul, searching far and wide for knowledge, hosted in a Synastry-class cruiser that has been extensively modified for combat and the use of ballistic weaponry~
 Reduces Ballistic weapon flux costs by %s, and increases all damage against missiles and fighters by %s. Has %s at all CR levels, and can correctly distinguish flares from actual targets.",Eccentric Sylph Core,graphics/sylphon/hullmods/SRD_ecore_cieve.png
 ,,,,,,,,,,,,,,,,,
+Networked Targeting Linkup,SRD_targeting_linkup,1,,"special","Special",6500,,,,5,9,18,28,data.scripts.hullmods.SRD_TargetingLinkup,"Links the ship's Sylph Core to a fleet-wide targeting grid, relaying info to other ships hooked up to the same system.
+
+For each deployed ally in the fleet with the same hullmod, this ship ignores %s/%s/%s/%s of enemy ECM, depending on the hullsize of the allied ship, up to a maximum of %s. In addition, it also gets %s of this bonus as bonus target leading accuracy.",ECM and targeting bonuses when massed.,graphics/sylphon/hullmods/SRD_modular_nullspace_conduit.png
+,,,,,,,,,,,,,,,,,
 Modular Nullspace Conduits,SRD_modular_nullspace_conduits,1,,"special, req_spaceport","Special, Requires Dock",8000,,,,3,5,10,20,data.scripts.hullmods.SRD_ModularNullspaceConduits,"A smaller, modular implementation of nullspace skimming technology. By using the ship's already-existing flux conduits for cooling and counter-balancing, it uses up only a fraction of the normal space required by such a device, but is significantly less efficient as a result.
 
 Functions as %s, but does not grant all the bonuses such conduits normally entail. The ship can skim nullspace, increasing its speed by up to %s while travelling in a straight line, but it takes %s as long to reach that speed compared to normal conduits.
