@@ -1,30 +1,0 @@
-{
-  "displayName": "Corvette",
-  "fluxCapacitors": 0,
-  "fluxVents": 0,
-  "goalVariant": true,
-  "hullId": "SRD_Breus",
-  "hullMods": [],
-  "permaMods": [],
-  "quality": 0,
-  "variantId": "SRD_Breus_corvette",
-  "weaponGroups": [
-    {
-      "autofire": true,
-      "mode": "LINKED",
-      "weapons": {
-        "WS0001": "SRD_embrace",
-        "WS0002": "SRD_embrace"
-      }
-    },
-    {
-      "autofire": true,
-      "mode": "LINKED",
-      "weapons": {
-        "WS0003": "SRD_lucidas",
-        "WS0004": "SRD_lucidas"
-      }
-    }
-  ],
-  "wings": []
-}
